Revert JWT realm files. Moved them to separate PR.